[tool.poetry]
name = "hack"
version = "0.1.0"
description = ""
authors = ["Sebastian Marines <sebastian0marines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
beanie = "^1.11.10"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
